# qingbao_notebook

./: .gitignore  README.md  check_and_repush.py  main.py  pyproject.toml  requirements.txt  scheduler.py
data/aibase_news/: history.json  latest.json
data/aibase_news/articles/: 26087.json  26088.json  26089.json  26091.json  26092.json  26093.json  26094.json  26095.json
data/autohome_all/: history.json  latest.json
data/autohome_all/articles/: 1312720.json  1312721.json  1312733.json  1312744.json  1312747.json  1312748.json  1312749.json  1312751.json  1312753.json  1312754.json  1312755.json  1312756.json  1312757.json  1312758.json  1312762.json  1312764.json  1312765.json  1312767.json  1312768.json  1312769.json  1312771.json  1312774.json  1312775.json  1312777.json  1312778.json  1312779.json  1312780.json  1312781.json  1312782.json  1312783.json  (+50 more)
data/kr36_ai/: history.json  latest.json
data/kr36_travel/: history.json  latest.json
data_server/: qingbao_zx.db  qingbao_zx.db-shm  qingbao_zx.db-wal
distributor/: __init__.py  feishu.py  router.py  summarizer.py
processor/: __init__.py  app.py  auth.py  database.py  llm_client.py  schemas.py
processor/static/: index.html
source_gov/: __init__.py  miit_base.py  miit_wjfb.py
sources/: aibase_base.py  aibase_news.py  autohome_all.py  autohome_base.py  dongchedi_base.py  dongchedi_newcar.py  kr36_ai.py  kr36_base.py  kr36_travel.py  push_to_processor.py
task_scheduler/: distribute_config.json  sources.json  state.json
workers/: __init__.py  ai_worker.py  distribute_worker.py  feishu_client.py
(+209 files in other folders)
