[project]
name = "a-qbnotebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "openai>=2.29.0",
    "uvicorn>=0.41.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/python/"
